Atomia Public Order Page v13.4

2013-05-20 Stefan Stankovic <stefan.stankovic@atomia.com>

	- [IMPROVEMENT] AtomiaServiceExtraProperties gets copy to orderline for AtomiaService CsLinuxWebsite

2013-05-10 Stefan Stankovic <stefan.stankovic@atomia.com>
	
	- [IMPROVEMENT] Norid page added for declaration that is needed for .NO domains. Cart duplicate item check added. new custom order line parameter DomainRegistrySpecificAttributes.

2013-04-29 Stefan Stankovic <stefan.stankovic@atomia.com>

	- [IMPROVEMENT] IE - edge default rendering engine not IE8

2013-04-29 Ivan Kustera <ivan@atomia.com>

	- [NEW] Added support for loading reseller's data based on Order Page url.

2013-04-26 Ivan Kustera <ivan@atomia.com>

	- [NEW] Added support for Adyen payment method.

2013-04-04 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Added DK, ES, NO, NL, BR and PT translations to the default theme.

Atomia Public Order Page v13.3

2013-03-30 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Added config option AllowOwnDomain which is used to determine whether option for ordering own domain on order page should be displayed or not.

2013-03-24 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Modified creating of new order to add MainDomain = true custom attribute for order line which is related to domain selected to be main.

2013-03-16 Ivan Kustera <ivan@atomia.com>

	- [NEW] Introduced product property NoWebsites which is used for setting all domain lines to provision CsDomainParking instead of website service.
	- [BUGFIX] Fixed handling of multiple setup fee products when preparing cart data.

2013-03-04 Ivan Kustera <ivan@atomia.com>

	- [BUGFIX] Fixed bug with empty countries dropdown list in case order submit fails
	
2013-02-12 Aleksandar Vukasinovic <vukasin@atomia.com>
	* New feature: WorldPay xml redirect payment method added.
	* New feature: Preselect packages